--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
     "start": "nodemon ./bin/www.js"
   },
   "author": "Kang Serius",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
+  }
 }
